# fix_agent

./: .gitignore  PROJECT_STATUS.md  pyproject.toml  requirements.txt
broker/: app.py  fix_schemas.py  fix_server.py  models.py  schemas.py  stock_universe.csv
broker-dashboard/: package.json
client/: models.py  schemas.py
scripts/: README.md  update_stock_prices.py
test_logs/: actual_fix_protocol_messages.txt  bidirectional_fix_messages.txt  complete_fix_message_flow.txt  fix_message_examples.md  latest_fix_messages.txt  latest_fix_server.txt
tests/broker/: test_api.py  test_fix_execution.py  test_fix_integration.py  test_models.py  test_schemas.py  test_stock_universe.py
tests/client/: test_models.py
