[project]
name = "fix-trading-system"
version = "0.1.0"
description = "FIX Protocol Stock Order Management System"
requires-python = ">=3.11"
dependencies = [
    "simplefix>=1.0.17",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.5",
    "sqlalchemy>=2.0.23",
    "python-socketio>=5.10.0",
    "python-engineio>=4.8.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["broker", "client", "shared"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=broker --cov=client --cov-report=term-missing"
